--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-		<link rel="stylesheet" href="game.css" />
+		<link rel="stylesheet" href="Assets/css/game.css" />
 	</head>
 	<body>
 		<div class="bagian2">
@@ -38,7 +38,7 @@
 			webkit-playsinline="true"
 			playsinline="true"
 		>
-			<source src="typing.mp3" type="audio/mpeg" />
+			<source src="Assets/Audio/typing.mp3" type="audio/mpeg" />
 		</audio>
 		<audio
 			controls
@@ -48,7 +48,7 @@
 			webkit-playsinline="true"
 			playsinline="true"
 		>
-			<source src="ketikakalah.mp3" type="audio/mpeg" />
+			<source src="Assets/Audio/ketikakalah.mp3" type="audio/mpeg" />
 		</audio>
 		<audio
 			controls
@@ -57,7 +57,7 @@
 			webkit-playsinline="true"
 			playsinline="true"
 		>
-			<source src="ketikamati.mp3" type="audio/mpeg" />
+			<source src="Assets/Audio/ketikamati.mp3" type="audio/mpeg" />
 		</audio>
 		<audio
 			controls
@@ -67,7 +67,7 @@
 			webkit-playsinline="true"
 			playsinline="true"
 		>
-			<source src="horor2.mp3" type="audio/mpeg" />
+			<source src="Assets/Audio/horor2.mp3" type="audio/mpeg" />
 		</audio>
 		<audio
 			controls
@@ -76,18 +76,18 @@
 			webkit-playsinline="true"
 			playsinline="true"
 		>
-			<source src="click.mp3" type="audio/mpeg" />
+			<source src="Assets/Audio/click.mp3" type="audio/mpeg" />
 		</audio>
 
 		<div class="cup-wrap">
 			<div class="smoke-wrap">
-				<img class="smoke" src="smoke.png" alt="smoke" />
+				<img class="smoke" src="Assets/smoke.png" alt="smoke" />
 			</div>
 			<div class="smoke-wrap">
-				<img class="smoke2" src="smoke.png" alt="smoke" />
+				<img class="smoke2" src="Assets/smoke.png" alt="smoke" />
 			</div>
 			<div class="smoke-wrap">
-				<img class="smoke3" src="smoke.png" alt="smoke" />
+				<img class="smoke3" src="Assets/smoke.png" alt="smoke" />
 			</div>
 		</div>
 
@@ -107,67 +107,67 @@
 		<!-- gambar kartu -->
 		<div class="kartu">
 			<!-- keriting -->
-			<img src="card/k/k2.png" />
-			<img src="card/k/k3.png" />
-			<img src="card/k/k4.png" />
-			<img src="card/k/k5.png" />
-			<img src="card/k/k6.png" />
-			<img src="card/k/k7.png" />
-			<img src="card/k/k8.png" />
-			<img src="card/k/k9.png" />
-			<img src="card/k/k10.png" />
-			<img src="card/k/kk.png" />
-			<img src="card/k/kq.png" />
-			<img src="card/k/kj.png" />
-			<img src="card/k/ka.png" />
+			<img src="Assets/images/k/k2.png" />
+			<img src="Assets/images/k/k3.png" />
+			<img src="Assets/images/k/k4.png" />
+			<img src="Assets/images/k/k5.png" />
+			<img src="Assets/images/k/k6.png" />
+			<img src="Assets/images/k/k7.png" />
+			<img src="Assets/images/k/k8.png" />
+			<img src="Assets/images/k/k9.png" />
+			<img src="Assets/images/k/k10.png" />
+			<img src="Assets/images/k/kk.png" />
+			<img src="Assets/images/k/kq.png" />
+			<img src="Assets/images/k/kj.png" />
+			<img src="Assets/images/k/ka.png" />
 			<!-- love -->
-			<img src="card/l/l2.png" />
-			<img src="card/l/l3.png" />
-			<img src="card/l/l4.png" />
-			<img src="card/l/l5.png" />
-			<img src="card/l/l6.png" />
-			<img src="card/l/l7.png" />
-			<img src="card/l/l8.png" />
-			<img src="card/l/l9.png" />
-			<img src="card/l/l10.png" />
-			<img src="card/l/lk.png" />
-			<img src="card/l/lq.png" />
-			<img src="card/l/lj.png" />
-			<img src="card/l/la.png" />
+			<img src="Assets/images/l/l2.png" />
+			<img src="Assets/images/l/l3.png" />
+			<img src="Assets/images/l/l4.png" />
+			<img src="Assets/images/l/l5.png" />
+			<img src="Assets/images/l/l6.png" />
+			<img src="Assets/images/l/l7.png" />
+			<img src="Assets/images/l/l8.png" />
+			<img src="Assets/images/l/l9.png" />
+			<img src="Assets/images/l/l10.png" />
+			<img src="Assets/images/l/lk.png" />
+			<img src="Assets/images/l/lq.png" />
+			<img src="Assets/images/l/lj.png" />
+			<img src="Assets/images/l/la.png" />
 			<!-- scope -->
-			<img src="card/s/s2.png" />
-			<img src="card/s/s3.png" />
-			<img src="card/s/s4.png" />
-			<img src="card/s/s5.png" />
-			<img src="card/s/s6.png" />
-			<img src="card/s/s7.png" />
-			<img src="card/s/s8.png" />
-			<img src="card/s/s9.png" />
-			<img src="card/s/s10.png" />
-			<img src="card/s/sk.png" />
-			<img src="card/s/sq.png" />
-			<img src="card/s/sj.png" />
-			<img src="card/s/sa.png" />
+			<img src="Assets/images/s/s2.png" />
+			<img src="Assets/images/s/s3.png" />
+			<img src="Assets/images/s/s4.png" />
+			<img src="Assets/images/s/s5.png" />
+			<img src="Assets/images/s/s6.png" />
+			<img src="Assets/images/s/s7.png" />
+			<img src="Assets/images/s/s8.png" />
+			<img src="Assets/images/s/s9.png" />
+			<img src="Assets/images/s/s10.png" />
+			<img src="Assets/images/s/sk.png" />
+			<img src="Assets/images/s/sq.png" />
+			<img src="Assets/images/s/sj.png" />
+			<img src="Assets/images/s/sa.png" />
 			<!-- waji -->
-			<img src="card/w/w2.png" />
-			<img src="card/w/w3.png" />
-			<img src="card/w/w4.png" />
-			<img src="card/w/w5.png" />
-			<img src="card/w/w6.png" />
-			<img src="card/w/w7.png" />
-			<img src="card/w/w8.png" />
-			<img src="card/w/w9.png" />
-			<img src="card/w/w10.png" />
-			<img src="card/w/wk.png" />
-			<img src="card/w/wq.png" />
-			<img src="card/w/wj.png" />
-			<img src="card/w/wa.png" />
-			<img src="card/w/cardd.png" />
+			<img src="Assets/images/w/w2.png" />
+			<img src="Assets/images/w/w3.png" />
+			<img src="Assets/images/w/w4.png" />
+			<img src="Assets/images/w/w5.png" />
+			<img src="Assets/images/w/w6.png" />
+			<img src="Assets/images/w/w7.png" />
+			<img src="Assets/images/w/w8.png" />
+			<img src="Assets/images/w/w9.png" />
+			<img src="Assets/images/w/w10.png" />
+			<img src="Assets/images/w/wk.png" />
+			<img src="Assets/images/w/wq.png" />
+			<img src="Assets/images/w/wj.png" />
+			<img src="Assets/images/w/wa.png" />
+			<img src="Assets/images/w/cardd.png" />
 		</div>
 
 		<!-- bagian ketika menang -->
 		<div id="ketikamenang">
-			<h1>YOu win</h1>
+			<h1>YOU WIN</h1>
 			<button id="playagain111">Play again</button>
 		</div>
 		<!-- bagian ketika kalah -->
@@ -179,7 +179,7 @@
 			<h1>OVER</h1>
 			<button id="playagain222">Restart</button>
 		</div>
-		<script src="game.js"></script>
+		<script src="Assets/js/game.js"></script>
 		<!-- // buat type -->
 		<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 		<script>
