--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="Assets/css/style.css" />
 	</head>
 	<body>
 		<audio controls hidden loop id="audio">
-			<source src="horor.ogg" type="audio/ogg" />
-			<source src="horor.mp3" type="audio/mpeg" />
+			<source src="Assets/horor.ogg" type="audio/ogg" />
+			<source src="Assets/Audio/horor.mp3" type="audio/mpeg" />
 		</audio>
 		<audio controls hidden id="audio2">
-			<source src="click.ogg" type="audio/ogg" />
-			<source src="click.mp3" type="audio/mpeg" />
+			<source src="Assets/click.ogg" type="audio/ogg" />
+			<source src="Assets/Audio/click.mp3" type="audio/mpeg" />
 		</audio>
 		<!-- bagian1 -->
 		<div class="bagian1">
@@ -24,20 +24,23 @@
 		<h3>press enter to continue</h3>
 		<section>
 			<div class="container">
-				<img class="text" src="text.png" alt="" />
-				<img class="light" src="light.png" alt="" />
-				<img class="card" src="card.png " alt="" />
-				<img class="card2" src="card2.png" alt="" />
+				<img class="text" src="Assets/images//text.png" alt="" />
+				<img class="light" src="Assets/images//light.png" alt="" />
+				<img class="card" src="Assets/images//card.png " alt="" />
+				<img class="card2" src="Assets/images//card2.png" alt="" />
 			</div>
 		</section>
 
-		<script type="text/javascript" src="vanilla-tilt.min.js"></script>
+		<script
+			type="text/javascript"
+			src="/Assets/js/vanilla-tilt.min.js"
+		></script>
 		<script type="text/javascript">
 			VanillaTilt.init(document.querySelector("section"), {
 				max: 5,
 				speed: 70000,
 			});
 		</script>
-		<script src="index.js"></script>
+		<script src="Assets/js/index.js"></script>
 	</body>
 </html>
